[gd_scene load_steps=14 format=2]

[ext_resource path="res://juego6/script/main.gd" type="Script" id=1]
[ext_resource path="res://juego6/art/lineDark21.png" type="Texture" id=2]
[ext_resource path="res://juego6/art/lineDark22.png" type="Texture" id=3]
[ext_resource path="res://juego6/scenes/mob.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego6/scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego6/scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://juego6/art/lineDark19.png" type="Texture" id=7]
[ext_resource path="res://juego6/art/lineDark20.png" type="Texture" id=8]
[ext_resource path="res://assets/pause.png" type="Texture" id=9]
[ext_resource path="res://juego6/art/CANCHA (1) (1).png" type="Texture" id=10]
[ext_resource path="res://SONIDOS/balones.mp3" type="AudioStream" id=11]
[ext_resource path="res://fotos/musica.png" type="Texture" id=12]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -4, 1, 0, 0, 0, 0, 731, 3, 0, 0, 0, 0, 731, 440, 0, 0, 0, 0, -2, 439, 0, 0, 0, 0, 0, 0 )
}

[node name="main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 728.0
margin_bottom = 440.0
color = Color( 0.211765, 0.647059, 0.329412, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 88.0
margin_top = 69.0
margin_right = 637.0
margin_bottom = 391.0
texture = ExtResource( 10 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="player" parent="." instance=ExtResource( 5 )]

[node name="mob_timer" type="Timer" parent="."]

[node name="score_timer" type="Timer" parent="."]

[node name="start_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="start_position" type="Position2D" parent="."]
position = Vector2( 368, 224 )

[node name="mob_path" type="Path2D" parent="."]
position = Vector2( -0.0163264, 0 )
scale = Vector2( 0.995918, 1 )
curve = SubResource( 1 )

[node name="mob_spaw_location" type="PathFollow2D" parent="mob_path"]
rotation = 0.222589

[node name="Controles" type="Node" parent="."]

[node name="tsb_right" type="TouchScreenButton" parent="Controles"]
visible = false
position = Vector2( 113, 317 )
normal = ExtResource( 8 )

[node name="tbs_left" type="TouchScreenButton" parent="Controles"]
visible = false
position = Vector2( 2, 315 )
normal = ExtResource( 7 )

[node name="tbs_up" type="TouchScreenButton" parent="Controles"]
visible = false
position = Vector2( 601, 245 )
normal = ExtResource( 2 )

[node name="tbs_down" type="TouchScreenButton" parent="Controles"]
visible = false
position = Vector2( 603, 350 )
normal = ExtResource( 3 )

[node name="btn_pause" type="TouchScreenButton" parent="."]
position = Vector2( 678, 2 )
normal = ExtResource( 9 )

[node name="btn_musica" type="TouchScreenButton" parent="."]
position = Vector2( 638, 2 )
normal = ExtResource( 12 )

[node name="Screen" type="CanvasLayer" parent="."]

[node name="musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="mob_timer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
[connection signal="pressed" from="Controles/tsb_right" to="player" method="_on_tsb_right_pressed"]
[connection signal="released" from="Controles/tsb_right" to="player" method="_on_tsb_right_released"]
[connection signal="pressed" from="Controles/tbs_left" to="player" method="_on_tbs_left_pressed"]
[connection signal="released" from="Controles/tbs_left" to="player" method="_on_tbs_left_released"]
[connection signal="pressed" from="Controles/tbs_up" to="player" method="_on_tbs_up_pressed"]
[connection signal="released" from="Controles/tbs_up" to="player" method="_on_tbs_up_released"]
[connection signal="pressed" from="Controles/tbs_down" to="player" method="_on_tbs_down_pressed"]
[connection signal="released" from="Controles/tbs_down" to="player" method="_on_tbs_down_released"]
[connection signal="pressed" from="btn_pause" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="btn_musica" to="." method="_on_btn_musica_pressed"]
